<resources>
    <string name="app_name">Bluetooth RC Controller</string>
    <string name="fireText">Fire Laser</string>
    <string name="action_settings">Settings</string>
    <string name="BTConnect">Connect: Car 1</string>
    <string name="BTConnect2">Connect: Car 2</string>
    <string name="fireButton">fireButton</string>
    <string name="upRight">upright</string>
    <string name="up">up</string>
    <string name="upLeft">upleft</string>
    <string name="downLeft">downleft</string>
    <string name="down">down</string>
    <string name="downRight">downright</string>
</resources>
