<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TwoButtonApp"
    android:id="@+id/app_name"
    android:backgroundTint="#cb0200"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/UpLeftButton"
            android:src="@drawable/ic_call_made_black_24dp_ul"
            android:contentDescription="@string/upLeft" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/UpButton"
            android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
            android:contentDescription="@string/up" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/UpRightButton"
            android:src="@drawable/ic_call_made_black_24dp"
            android:contentDescription="@string/upRight" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left">

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/DownLeftButton"
            android:src="@drawable/ic_call_made_black_24dp_dl"
            android:contentDescription="@string/downLeft" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/DownButton"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:contentDescription="@string/down" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/DownRightButton"
            android:src="@drawable/ic_call_made_black_24dp_dr"
            android:contentDescription="@string/downRight" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTConnect"
            android:id="@+id/BTConnect" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTConnect2"
            android:id="@+id/BTConnect2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:paddingRight="25dp">

        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/fireLaser"
            android:background="@drawable/mybutton"
            android:backgroundTint="#ff0d0a"
            android:contentDescription="@string/fireButton"
            android:src="@drawable/mybutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fireText"
            android:id="@+id/fireText"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</FrameLayout>